<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>Sample</groupId>
	<artifactId>Automation2</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<packaging>jar</packaging>

	<name>Spectrum-Mobile</name>
	<url>http://maven.apache.org</url>

	<properties>

		<surefire.fork.count>5</surefire.fork.count>
		<cucumber.version>1.2.4</cucumber.version>
		<selenium.version>2.53.1</selenium.version>
		<junit.version>4.11</junit.version>

		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

	</properties>

	<dependencies>
		<dependency>
			<groupId>org.seleniumhq.selenium</groupId>
			<artifactId>selenium-java</artifactId>
			<version>3.11.0</version>
		</dependency>

		<dependency>
			<groupId>io.appium</groupId>
			<artifactId>java-client</artifactId>
			<version>6.0.0-BETA4</version>
		</dependency>

		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.12</version>
		</dependency>
		<!-- http://mvnrepository.com/artifact/info.cukes/cucumber-java -->
		<!-- <dependency> <groupId>info.cukes</groupId> <artifactId>cucumber-java</artifactId> 
			<version>1.2.2</version> </dependency> -->
		<!-- http://mvnrepository.com/artifact/info.cukes/cucumber-junit -->
		<dependency>
			<groupId>io.cucumber</groupId>
			<artifactId>cucumber-java</artifactId>
			<version>2.4.0</version>
		</dependency>

		<dependency>
			<groupId>io.cucumber</groupId>
			<artifactId>cucumber-junit</artifactId>
			<version>2.4.0</version>
		</dependency>

		<dependency>
			<groupId>io.cucumber</groupId>
			<artifactId>cucumber-core</artifactId>
			<version>2.4.0</version>
		</dependency>

		<dependency>
			<groupId>io.cucumber</groupId>
			<artifactId>cucumber-picocontainer</artifactId>
			<version>2.4.0</version>
		</dependency>

		<dependency>
			<groupId>io.cucumber</groupId>
			<artifactId>gherkin</artifactId>
			<version>5.0.0</version>
		</dependency>


		<!-- <dependency> <groupId>info.cukes</groupId> <artifactId>cucumber-java</artifactId> 
			<version>1.2.5</version> </dependency> <dependency> <groupId>info.cukes</groupId> 
			<artifactId>cucumber-junit</artifactId> <version>1.2.4</version> </dependency> 
			<dependency> <groupId>info.cukes</groupId> <artifactId>cucumber-core</artifactId> 
			<version>1.2.5</version> </dependency> <dependency> <groupId>info.cukes</groupId> 
			<artifactId>cucumber-picocontainer</artifactId> <version>1.2.5</version> 
			</dependency> <dependency> <groupId>net.masterthought</groupId> <artifactId>cucumber-reporting</artifactId> 
			<version>3.15.0</version> </dependency> -->

		<dependency>
			<groupId>log4j</groupId>
			<artifactId>log4j</artifactId>
			<version>1.2.17</version>
		</dependency>

		<!-- dependency for Json Reader -->
		<dependency>
			<groupId>com.googlecode.json-simple</groupId>
			<artifactId>json-simple</artifactId>
			<version>1.1.1</version>
		</dependency>

		

		<!-- dependency for email verifications -->
		<dependency>
			<groupId>javax.mail</groupId>
			<artifactId>mail</artifactId>
			<version>1.4.7</version>
		</dependency>

	</dependencies>

	<!-- REPORTING -->
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.3</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>3.0.0</version>
				<configuration>
					<projectName>Spectrum-Mobile</projectName>
					<outputDirectory>${project.build.directory}/JavaDoc</outputDirectory>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.21.0</version>
				<executions>
					<execution>
						<id>acceptance-test</id>
						<phase>integration-test</phase>
						<goals>
							<goal>test</goal>
						</goals>
						<configuration>
							<!--<forkCount>${surefire.fork.count}</forkCount> -->
							<reuseForks>false</reuseForks>
							<argLine>-Duser.language=en</argLine>
							<argLine>-Xmx1024m</argLine>
							<argLine>-XX:MaxPermSize=256m</argLine>
							<argLine>-Dfile.encoding=UTF-8</argLine>
							<useFile>false</useFile>
							<includes>

								<!--When run the script parallely -->
								<!--<include>**/*Runner.class</include> -->


								<!-- When run script one by one -->
								<include>**/Runner.class</include>
							</includes>
							<testFailureIgnore>true</testFailureIgnore>
						</configuration>
					</execution>
				</executions>
			</plugin>

			<!-- Report Merger -->
			<!-- <plugin> <groupId>org.codehaus.mojo</groupId> <artifactId>exec-maven-plugin</artifactId> 
				<version>1.2.1</version> <executions> <execution> <phase>post-integration-test</phase> 
				<goals> <goal>java</goal> </goals> </execution> </executions> <configuration> 
				<mainClass>cucumber.jvm.parallel.ReportMerger</mainClass> <arguments> <argument>target/CucumberHTMLReport/</argument> 
				</arguments> </configuration> </plugin> -->

			<plugin>
	            <groupId>com.saucelabs.maven.plugin</groupId>
	            <artifactId>sauce-connect-plugin</artifactId>
	            <version>2.1.23</version>
	            <configuration>
	                <sauceUsername>User_Name</sauceUsername>
	                <sauceAccessKey>293874192384713</sauceAccessKey>
	            </configuration>
	            <executions>
	                <!-- Start Sauce Connect prior to running the integration tests -->
	                <execution>
	                    <id>start-sauceconnct</id>
	                    <phase>pre-integration-test</phase>
	                    <goals>
	                        <goal>start-sauceconnect</goal>
	                    </goals>
	                </execution>
	                <!-- Stop the Sauce Connect process after the integration tests have finished -->
	                <execution>
	                    <id>stop-sauceconnect</id>
	                    <phase>post-integration-test</phase>
	                    <goals>
	                        <goal>stop-sauceconnect</goal>
	                    </goals>
	                </execution>
	            </executions>
        	</plugin>
			
			<plugin>
                <groupId>org.codehaus.cargo</groupId>
                <artifactId>cargo-maven2-plugin</artifactId>
                <version>1.2.0</version>
                <configuration>
                    <container>
                        <containerId>jetty7x</containerId>
                        <type>embedded</type>
                    </container>
                    <deployer>
                        <type>embedded</type>
                        <deployables>
                            <deployable>
                                <groupId>com.saucelabs</groupId>
                                <type>war</type>
                                <artifactId>sauce-connect-example</artifactId>
                                <properties>
                                    <context>/sc</context>
                                </properties>
                            </deployable>
                        </deployables>
                    </deployer>
                </configuration>
                <executions>
                    <execution>
                        <id>start-jetty</id>
                        <phase>pre-integration-test</phase>
                        <goals>
                            <goal>start</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>stop-jetty</id>
                        <phase>post-integration-test</phase>
                        <goals>
                            <goal>stop</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>


			<plugin>
				<groupId>net.masterthought</groupId>
				<artifactId>maven-cucumber-reporting</artifactId>
				<version>3.14.0</version>

				<executions>
					<execution>
						<id>execution</id>
						<phase>verify</phase>
						<goals>
							<goal>generate</goal>
						</goals>
						<configuration>
							<projectName>cs</projectName>
							<outputDirectory>${project.build.directory}/site/cucumber-reports</outputDirectory>
							<cucumberOutput>${project.build.directory}/cucumber.json</cucumberOutput>
							<!-- <parallelTesting>true</parallelTesting> -->
							<enableFlashCharts>false</enableFlashCharts>
							<skippedFails>true</skippedFails>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
</project>

